# narraterad

./: .gitignore  capture.py  main.py  nlp.py  pyproject.toml  radlex.py  setup_shortcuts.ps1  structure.py  transcribe.py
frontend/: index.html
